refacto user CRUD and add some tests for few controllers
