# app/modules/users/application/dto/update.user.dto.ts
@@ -1,0 +1,6 @@
+export type UpdateUserDto = {
+  email?: string
+  firstname?: string
+  lastname?: string
+  role?: 'user' | 'admin'
+}
